# Ask2Slide

./: .gitignore  README.md  docker-compose.yml  init-services.sh  package-lock.json  pyproject.toml
app/: README.md  run_rag_server.py
app/core/: config.py  logging.py  model_server.py
app/db/: __init__.py  milvus.py  minio.py
app/rag/: colbert_service.py  convert_file.py  get_embedding.py  process_file.py
backend/: README.md  example.js  package-lock.json  package.json  server.js
backend/src/api/: chat.js
backend/src/config/: db.js  llm.js
backend/src/models/: conversation.js
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/chat/components/: ChatInput.tsx  ChatMessages.tsx  Sidebar.tsx
frontend/src/store/: chatStore.ts  documentStore.ts
llm-server/: server.py
models/: README.md
