[project]
name = "ask2slide"
version = "0.1.0"
description = ""
authors = [
    {name = "tang haozhe",email = "tanghaozhe@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "minio (>=7.2.15,<8.0.0)",
    "pymilvus (>=2.5.8,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
